@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5177 2004/03/09 22:17:40 recht Exp $
+$NetBSD: CHANGES,v 1.5178 2004/03/09 22:21:08 jmmv Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1351,3 +1351,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated gtk2+ to 2.2.4nb6 [recht 2004-03-09]
 	Updated at-spi to 1.3.15 [jmmv 2004-03-09]
 	Updated gnome-mag to 0.10.8 [jmmv 2004-03-09]
+	Updated tkcvs to 7.2 [minskim 2004-03-09]
